@@ -1,9 +1,13 @@
+sudo: required
+dist: trusty
 language: python
-python: 3.5
+python: 3.7-dev
 env:
   - TOXENV=py27
   - TOXENV=py34
   - TOXENV=py35
+  - TOXENV=py36
+  - TOXENV=py37
   - TOXENV=cover
 install: pip install tox
 script: tox
