@@ -9,6 +9,7 @@ setup(author='Eduardo Cuducos',
                    'Programming Language :: Python :: 2.7',
                    'Programming Language :: Python :: 3.4',
                    'Programming Language :: Python :: 3.5',
+                   'Programming Language :: Python :: 3.6',
                    'Intended Audience :: Developers',
                    'Topic :: Utilities',
                    'License :: OSI Approved :: MIT License'],
