@@ -2,6 +2,7 @@
 
 **0.1.2**
   * Allow the usage of file paths and not only filenames
+  * Add tests for Python 3.6 and 3.7
 **0.1.1**
   * Show gist URL after creating or updating
 **0.1.0**
